# cpp-calculator

./: .gitignore  CMakeLists.txt  build.sh  main  my_program
libs/: itoa.c
src/: main.cpp
src/ast/: ast.hpp  expr.hpp  stmt.hpp  type.hpp
src/codegen/: llvm.hpp  llvm_expr.cpp  llvm_stmt.cpp  llvm_type.cpp
src/color/: color.hpp
src/error/: error.cpp  error.hpp
src/eval/: eval.cpp
src/interpreter/: interpreter.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/memory/: memory.hpp
src/parser/: expr.cpp  parser.cpp  parser.hpp  stmt.cpp
test/: test.xi  test.zu
